[package]
name = "parler-indexer"
version = "0.1.0"
authors = ["tarq"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unhtml = "0.8.0"
unhtml_derive = "0.8.0"
selectors = "0.22"
serde = { version = "1.0.120", features = ["derive"] }
serde_json = "1.0.61"
